--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -436,3 +436,135 @@
         margin-bottom: 100px;
     }
 }
+
+// Tag GetOff
+
+.tagGetOff{
+    position: fixed;
+    top:35%;
+    right:0px;
+    transform: rotate(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 8;
+    text-decoration: none;
+    .discount{
+        animation: getOff 0.5s linear;
+        .title{
+            font-size:$regularText;
+            font-family: $fontJura;
+            color: $whiteColor;
+            text-align: center;
+            writing-mode: vertical-rl;
+            text-orientation: right;
+            transform: rotate(180deg);
+            font-weight: $bold;
+            cursor: pointer;
+            background-color: $blackColor;
+            padding: 40px 15px;
+            transition: $transition;
+            &:hover{
+                background-color: $primaryColor;
+                transform: translateX(15%) rotate(180deg);
+            }
+        }
+        @keyframes getOff{
+            0%{
+                transform: translateX(-100%);
+            }
+            100%{
+                transform: translateX(0%);
+            }
+        }
+    }
+}
+
+ // Banner getOff
+
+.getOffShowRoom{
+    width:$screenPercentageWidth;
+    height:$screenPercentageHeight;
+    #cross{
+        display: none;
+        &:checked ~ .bannerGetOff{
+            transform: translateY(100%);
+        }
+    }
+    .bannerGetOff{
+        width: 65vw;
+        height: auto;
+        @extend .flexColumnEvenlyCenter;
+        border-radius: 10px;
+        background-color:#00000013;
+        box-shadow: $boxShadowMenu;
+        position: fixed;
+        top:-340px;
+        left:18%;
+        z-index: 8;
+        transform: translateY(300%);
+        overflow: hidden;
+        transition: $transition;
+        .title{
+            font-size:$subtitle;
+            font-family: $fontRubik;
+            color: $primaryColor;
+            margin-top:20px;
+        }
+        label{
+            .crossCloseWhite{
+                width:25px;
+                position: relative;
+                top: 15px;
+                right:-400px;
+                cursor: pointer;
+                z-index: 10;
+                transform: rotate(0deg);
+                transition: $transition;
+                &:hover{
+                    transform: rotate(90deg);
+                }
+            }
+        }
+        .slideGetOff{
+            @extend .flexRowEvenlyCenter;
+            padding: 20px;
+            backdrop-filter: blur(10px);
+            .hoddy{
+                padding:10px;
+                img{
+                    width:100%;
+                    height:auto;
+                }
+                h3{
+                    margin-top: 30px;
+                    font-size:$regularText;
+                    font-family: $fontJura;
+                    color: $primaryColor;
+                }
+                p{
+                    padding: 10px auto;
+                    font-size:$regularText;
+                    font-family: $fontJura;
+                    color: $backgroundColor;
+                }
+            }
+        }
+    }
+    .bannerGetOff::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color:#000000e5;
+        backdrop-filter: blur(10px);
+        filter: blur(10px);
+        z-index: -1;
+        border-radius: 10px;
+    }
+    .bannerGetOff > * {
+        position: relative;
+    }
+}
