--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -45,7 +45,7 @@
 
     // Banner getOff
 
-    .getOffHoddy{
+    .getOffStore{
         width:100%;
         height: 100%;
         #cross{
@@ -55,7 +55,7 @@
             }
         }
         .bannerGetOff{
-            width: 62vw;
+            width: 65vw;
             height: auto;
             @extend .flexColumnEvenlyCenter;
             border-radius: 10px;
@@ -73,7 +73,7 @@
                     width:25px;
                     position: relative;
                     top:15px;
-                    right:-390px;
+                    right:-400px;
                     cursor: pointer;
                     z-index: 10;
                     transform: rotate(0deg);
