--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -114,7 +114,7 @@
 
         <!-- Get 25% Off -->
 
-        <section class="getOffHoddy" id="getOff">
+        <section class="getOffShowRoom" id="getOff">
             <input type="checkbox" id="cross">
             <article class="bannerGetOff">
                 <label for="cross">
