--- a/views/sign_In_&_Create_Account.html
+++ b/views/sign_In_&_Create_Account.html
@@ -115,7 +115,7 @@
 
         <!-- Get 25% Off -->
 
-        <section class="getOffHoddy" id="getOff">
+        <section class="getOffSignIn" id="getOff">
             <article class="containerGetOff">
                 <div class="info">
                     <h2 class="title">Get 25% off</h2>
