--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -1,6 +1,6 @@
 // GettOff
 
-.getOff{
+.getOffHoddy{
     width:$screenPercentageWidth;
     height:$screenPercentageHeight;
     background-image: url("../img/background_Gift.webp");
@@ -77,7 +77,7 @@
         }
     }
     .bannerGetOff{
-        width: 62vw;
+        width: 65vw;
         height: auto;
         @extend .flexColumnEvenlyCenter;
         border-radius: 10px;
@@ -101,7 +101,7 @@
                 width:25px;
                 position: relative;
                 top:-90px;
-                right:-390px;
+                right:-400px;
                 cursor: pointer;
                 z-index: 3;
                 transform: rotate(0deg);
